Fix scrollbar moving content

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+header, main {
+  padding-left: calc(100vw - 100%) !important;
+}
+
 .container {
   max-width: 1170px;
   margin: auto;
